playscript-cpp/src/grammar/PlayScriptParser.cpp

// Generated from PlayScript.g4 by ANTLR 4.8


#include "PlayScriptListener.h"
#include "PlayScriptVisitor.h"

#include "PlayScriptParser.h"


using namespace antlrcpp;
using namespace antlr4;

PlayScriptParser::PlayScriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PlayScriptParser::~PlayScriptParser() {
  delete _interpreter;
}

std::string PlayScriptParser::getGrammarFileName() const {
  return "PlayScript.g4";
}

const std::vector<std::string>& PlayScriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PlayScriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ClassDeclarationContext ------------------------------------------------------------------

PlayScriptParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PlayScriptParser::ClassDeclarationContext::CLASS() {
  return getToken(PlayScriptParser::CLASS, 0);
}

tree::TerminalNode* PlayScriptParser::ClassDeclarationContext::IDENTIFIER() {
  return getToken(PlayScriptParser::IDENTIFIER, 0);
}

PlayScriptParser::ClassBodyContext* PlayScriptParser::ClassDeclarationContext::classBody() {
  return getRuleContext<PlayScriptParser::ClassBodyContext>(0);
}

tree::TerminalNode* PlayScriptParser::ClassDeclarationContext::EXTENDS() {
  return getToken(PlayScriptParser::EXTENDS, 0);
}

PlayScriptParser::TypeTypeContext* PlayScriptParser::ClassDeclarationContext::typeType() {
  return getRuleContext<PlayScriptParser::TypeTypeContext>(0);
}

tree::TerminalNode* PlayScriptParser::ClassDeclarationContext::IMPLEMENTS() {
  return getToken(PlayScriptParser::IMPLEMENTS, 0);
}

PlayScriptParser::TypeListContext* PlayScriptParser::ClassDeclarationContext::typeList() {
  return getRuleContext<PlayScriptParser::TypeListContext>(0);
}


size_t PlayScriptParser::ClassDeclarationContext::getRuleIndex() const {
  return PlayScriptParser::RuleClassDeclaration;
}

void PlayScriptParser::ClassDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDeclaration(this);
}

void PlayScriptParser::ClassDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDeclaration(this);
}


antlrcpp::Any PlayScriptParser::ClassDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitClassDeclaration(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::ClassDeclarationContext* PlayScriptParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 0, PlayScriptParser::RuleClassDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(PlayScriptParser::CLASS);
    setState(97);
    match(PlayScriptParser::IDENTIFIER);
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PlayScriptParser::EXTENDS) {
      setState(98);
      match(PlayScriptParser::EXTENDS);
      setState(99);
      typeType();
    }
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PlayScriptParser::IMPLEMENTS) {
      setState(102);
      match(PlayScriptParser::IMPLEMENTS);
      setState(103);
      typeList();
    }
    setState(106);
    classBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassBodyContext ------------------------------------------------------------------

PlayScriptParser::ClassBodyContext::ClassBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PlayScriptParser::ClassBodyContext::LBRACE() {
  return getToken(PlayScriptParser::LBRACE, 0);
}

tree::TerminalNode* PlayScriptParser::ClassBodyContext::RBRACE() {
  return getToken(PlayScriptParser::RBRACE, 0);
}

std::vector<PlayScriptParser::ClassBodyDeclarationContext *> PlayScriptParser::ClassBodyContext::classBodyDeclaration() {
  return getRuleContexts<PlayScriptParser::ClassBodyDeclarationContext>();
}

PlayScriptParser::ClassBodyDeclarationContext* PlayScriptParser::ClassBodyContext::classBodyDeclaration(size_t i) {
  return getRuleContext<PlayScriptParser::ClassBodyDeclarationContext>(i);
}


size_t PlayScriptParser::ClassBodyContext::getRuleIndex() const {
  return PlayScriptParser::RuleClassBody;
}

void PlayScriptParser::ClassBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassBody(this);
}

void PlayScriptParser::ClassBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassBody(this);
}


antlrcpp::Any PlayScriptParser::ClassBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitClassBody(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::ClassBodyContext* PlayScriptParser::classBody() {
  ClassBodyContext *_localctx = _tracker.createInstance<ClassBodyContext>(_ctx, getState());
  enterRule(_localctx, 2, PlayScriptParser::RuleClassBody);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(PlayScriptParser::LBRACE);
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PlayScriptParser::BOOLEAN)
      | (1ULL << PlayScriptParser::BYTE)
      | (1ULL << PlayScriptParser::CHAR)
      | (1ULL << PlayScriptParser::DOUBLE)
      | (1ULL << PlayScriptParser::FLOAT)
      | (1ULL << PlayScriptParser::INT)
      | (1ULL << PlayScriptParser::LONG)
      | (1ULL << PlayScriptParser::SHORT)
      | (1ULL << PlayScriptParser::VOID)
      | (1ULL << PlayScriptParser::FUNCTION))) != 0) || _la == PlayScriptParser::SEMI

    || _la == PlayScriptParser::IDENTIFIER) {
      setState(109);
      classBodyDeclaration();
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(PlayScriptParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassBodyDeclarationContext ------------------------------------------------------------------

PlayScriptParser::ClassBodyDeclarationContext::ClassBodyDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PlayScriptParser::ClassBodyDeclarationContext::SEMI() {
  return getToken(PlayScriptParser::SEMI, 0);
}

PlayScriptParser::MemberDeclarationContext* PlayScriptParser::ClassBodyDeclarationContext::memberDeclaration() {
  return getRuleContext<PlayScriptParser::MemberDeclarationContext>(0);
}


size_t PlayScriptParser::ClassBodyDeclarationContext::getRuleIndex() const {
  return PlayScriptParser::RuleClassBodyDeclaration;
}

void PlayScriptParser::ClassBodyDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassBodyDeclaration(this);
}

void PlayScriptParser::ClassBodyDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassBodyDeclaration(this);
}


antlrcpp::Any PlayScriptParser::ClassBodyDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitClassBodyDeclaration(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::ClassBodyDeclarationContext* PlayScriptParser::classBodyDeclaration() {
  ClassBodyDeclarationContext *_localctx = _tracker.createInstance<ClassBodyDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, PlayScriptParser::RuleClassBodyDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PlayScriptParser::SEMI: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        match(PlayScriptParser::SEMI);
        break;
      }

      case PlayScriptParser::BOOLEAN:
      case PlayScriptParser::BYTE:
      case PlayScriptParser::CHAR:
      case PlayScriptParser::DOUBLE:
      case PlayScriptParser::FLOAT:
      case PlayScriptParser::INT:
      case PlayScriptParser::LONG:
      case PlayScriptParser::SHORT:
      case PlayScriptParser::VOID:
      case PlayScriptParser::FUNCTION:
      case PlayScriptParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        memberDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MemberDeclarationContext ------------------------------------------------------------------

PlayScriptParser::MemberDeclarationContext::MemberDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PlayScriptParser::FunctionDeclarationContext* PlayScriptParser::MemberDeclarationContext::functionDeclaration() {
  return getRuleContext<PlayScriptParser::FunctionDeclarationContext>(0);
}

PlayScriptParser::FieldDeclarationContext* PlayScriptParser::MemberDeclarationContext::fieldDeclaration() {
  return getRuleContext<PlayScriptParser::FieldDeclarationContext>(0);
}


size_t PlayScriptParser::MemberDeclarationContext::getRuleIndex() const {
  return PlayScriptParser::RuleMemberDeclaration;
}

void PlayScriptParser::MemberDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMemberDeclaration(this);
}

void PlayScriptParser::MemberDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMemberDeclaration(this);
}


antlrcpp::Any PlayScriptParser::MemberDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitMemberDeclaration(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::MemberDeclarationContext* PlayScriptParser::memberDeclaration() {
  MemberDeclarationContext *_localctx = _tracker.createInstance<MemberDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, PlayScriptParser::RuleMemberDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(121);
      functionDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(122);
      fieldDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

PlayScriptParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PlayScriptParser::FunctionDeclarationContext::IDENTIFIER() {
  return getToken(PlayScriptParser::IDENTIFIER, 0);
}

PlayScriptParser::FormalParametersContext* PlayScriptParser::FunctionDeclarationContext::formalParameters() {
  return getRuleContext<PlayScriptParser::FormalParametersContext>(0);
}

PlayScriptParser::FunctionBodyContext* PlayScriptParser::FunctionDeclarationContext::functionBody() {
  return getRuleContext<PlayScriptParser::FunctionBodyContext>(0);
}

PlayScriptParser::TypeTypeOrVoidContext* PlayScriptParser::FunctionDeclarationContext::typeTypeOrVoid() {
  return getRuleContext<PlayScriptParser::TypeTypeOrVoidContext>(0);
}

std::vector<tree::TerminalNode *> PlayScriptParser::FunctionDeclarationContext::LBRACK() {
  return getTokens(PlayScriptParser::LBRACK);
}

tree::TerminalNode* PlayScriptParser::FunctionDeclarationContext::LBRACK(size_t i) {
  return getToken(PlayScriptParser::LBRACK, i);
}

std::vector<tree::TerminalNode *> PlayScriptParser::FunctionDeclarationContext::RBRACK() {
  return getTokens(PlayScriptParser::RBRACK);
}

tree::TerminalNode* PlayScriptParser::FunctionDeclarationContext::RBRACK(size_t i) {
  return getToken(PlayScriptParser::RBRACK, i);
}

tree::TerminalNode* PlayScriptParser::FunctionDeclarationContext::THROWS() {
  return getToken(PlayScriptParser::THROWS, 0);
}

PlayScriptParser::QualifiedNameListContext* PlayScriptParser::FunctionDeclarationContext::qualifiedNameList() {
  return getRuleContext<PlayScriptParser::QualifiedNameListContext>(0);
}


size_t PlayScriptParser::FunctionDeclarationContext::getRuleIndex() const {
  return PlayScriptParser::RuleFunctionDeclaration;
}

void PlayScriptParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void PlayScriptParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}


antlrcpp::Any PlayScriptParser::FunctionDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclaration(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::FunctionDeclarationContext* PlayScriptParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, PlayScriptParser::RuleFunctionDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(125);
      typeTypeOrVoid();
      break;
    }

    }
    setState(128);
    match(PlayScriptParser::IDENTIFIER);
    setState(129);
    formalParameters();
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PlayScriptParser::LBRACK) {
      setState(130);
      match(PlayScriptParser::LBRACK);
      setState(131);
      match(PlayScriptParser::RBRACK);
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PlayScriptParser::THROWS) {
      setState(137);
      match(PlayScriptParser::THROWS);
      setState(138);
      qualifiedNameList();
    }
    setState(141);
    functionBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionBodyContext ------------------------------------------------------------------

PlayScriptParser::FunctionBodyContext::FunctionBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PlayScriptParser::BlockContext* PlayScriptParser::FunctionBodyContext::block() {
  return getRuleContext<PlayScriptParser::BlockContext>(0);
}

tree::TerminalNode* PlayScriptParser::FunctionBodyContext::SEMI() {
  return getToken(PlayScriptParser::SEMI, 0);
}


size_t PlayScriptParser::FunctionBodyContext::getRuleIndex() const {
  return PlayScriptParser::RuleFunctionBody;
}

void PlayScriptParser::FunctionBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionBody(this);
}

void PlayScriptParser::FunctionBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionBody(this);
}


antlrcpp::Any PlayScriptParser::FunctionBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitFunctionBody(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::FunctionBodyContext* PlayScriptParser::functionBody() {
  FunctionBodyContext *_localctx = _tracker.createInstance<FunctionBodyContext>(_ctx, getState());
  enterRule(_localctx, 10, PlayScriptParser::RuleFunctionBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PlayScriptParser::LBRACE: {
        enterOuterAlt(_localctx, 1);
        setState(143);
        block();
        break;
      }

      case PlayScriptParser::SEMI: {
        enterOuterAlt(_localctx, 2);
        setState(144);
        match(PlayScriptParser::SEMI);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeTypeOrVoidContext ------------------------------------------------------------------

PlayScriptParser::TypeTypeOrVoidContext::TypeTypeOrVoidContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PlayScriptParser::TypeTypeContext* PlayScriptParser::TypeTypeOrVoidContext::typeType() {
  return getRuleContext<PlayScriptParser::TypeTypeContext>(0);
}

tree::TerminalNode* PlayScriptParser::TypeTypeOrVoidContext::VOID() {
  return getToken(PlayScriptParser::VOID, 0);
}


size_t PlayScriptParser::TypeTypeOrVoidContext::getRuleIndex() const {
  return PlayScriptParser::RuleTypeTypeOrVoid;
}

void PlayScriptParser::TypeTypeOrVoidContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeTypeOrVoid(this);
}

void PlayScriptParser::TypeTypeOrVoidContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeTypeOrVoid(this);
}


antlrcpp::Any PlayScriptParser::TypeTypeOrVoidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitTypeTypeOrVoid(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::TypeTypeOrVoidContext* PlayScriptParser::typeTypeOrVoid() {
  TypeTypeOrVoidContext *_localctx = _tracker.createInstance<TypeTypeOrVoidContext>(_ctx, getState());
  enterRule(_localctx, 12, PlayScriptParser::RuleTypeTypeOrVoid);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(149);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PlayScriptParser::BOOLEAN:
      case PlayScriptParser::BYTE:
      case PlayScriptParser::CHAR:
      case PlayScriptParser::DOUBLE:
      case PlayScriptParser::FLOAT:
      case PlayScriptParser::INT:
      case PlayScriptParser::LONG:
      case PlayScriptParser::SHORT:
      case PlayScriptParser::FUNCTION:
      case PlayScriptParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(147);
        typeType();
        break;
      }

      case PlayScriptParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(148);
        match(PlayScriptParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameListContext ------------------------------------------------------------------

PlayScriptParser::QualifiedNameListContext::QualifiedNameListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PlayScriptParser::QualifiedNameContext *> PlayScriptParser::QualifiedNameListContext::qualifiedName() {
  return getRuleContexts<PlayScriptParser::QualifiedNameContext>();
}

PlayScriptParser::QualifiedNameContext* PlayScriptParser::QualifiedNameListContext::qualifiedName(size_t i) {
  return getRuleContext<PlayScriptParser::QualifiedNameContext>(i);
}

std::vector<tree::TerminalNode *> PlayScriptParser::QualifiedNameListContext::COMMA() {
  return getTokens(PlayScriptParser::COMMA);
}

tree::TerminalNode* PlayScriptParser::QualifiedNameListContext::COMMA(size_t i) {
  return getToken(PlayScriptParser::COMMA, i);
}


size_t PlayScriptParser::QualifiedNameListContext::getRuleIndex() const {
  return PlayScriptParser::RuleQualifiedNameList;
}

void PlayScriptParser::QualifiedNameListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualifiedNameList(this);
}

void PlayScriptParser::QualifiedNameListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PlayScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualifiedNameList(this);
}


antlrcpp::Any PlayScriptParser::QualifiedNameListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PlayScriptVisitor*>(visitor))
    return parserVisitor->visitQualifiedNameList(this);
  else
    return visitor->visitChildren(this);
}

PlayScriptParser::QualifiedNameListContext* PlayScriptParser::qualifiedNameList() {
  QualifiedNameListContext *_localctx = _tracker.createInstance<QualifiedNameListContext>(_ctx, getState());
  enterRule(_localctx, 14, PlayScriptParser::RuleQualifiedNameList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    qualifiedName();
    setState(156);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PlayScriptParser::COMMA) {
      setState(152);
      match(PlayScriptParser::COMMA);
      setState(153);
      qualifiedName();
      setState(158);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FormalParametersContext ------------------------------------------------------------------

PlayScriptParser::FormalParametersContext::FormalParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PlayScriptParser::FormalParametersContext::LPAREN() {
  return getToken(PlayScriptParser::LPAREN, 0);
}

tree::TerminalNode* PlayScriptParser::FormalParametersContext::RPAREN() {
  return getToken(PlayScriptParser::RPAREN, 0);
}

PlayScriptParser::FormalParameterListContext* PlayScriptParser::FormalParametersContext::formalParameterList() {
  return getRuleContext<PlayScriptParser::FormalParameterListContext>(0);
}


size_t PlayScriptParser::FormalParametersContext::getRuleIndex() const {
  return PlayScriptParser::RuleFormalParameters;
}
